<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <name>apify-camunda-connector</name>
    <description>Camunda 8.8 Connector for Apify web scraping and automation API</description>
    <groupId>io.camunda.connector</groupId>
    <artifactId>apify-camunda-connector</artifactId>
    <packaging>jar</packaging>
    <version>0.1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.release>21</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <version.connectors>8.8.0</version.connectors>
        <version.assertj>3.27.6</version.assertj>
        <version.junit-jupiter>5.14.2</version.junit-jupiter>
        <version.mockito>5.21.0</version.mockito>
        <version.httpclient>5.6</version.httpclient>
        <version.httpcore>5.4</version.httpcore>
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
    </properties>

    <dependencies>
        <dependency>
            <groupId>io.camunda.connector</groupId>
            <artifactId>connector-core</artifactId>
            <version>${version.connectors}</version>
            <scope>provided</scope>
        </dependency>

        <!-- Element template generator annotations (compile-time only) -->
        <dependency>
            <groupId>io.camunda.connector</groupId>
            <artifactId>element-template-generator-core</artifactId>
            <version>${version.connectors}</version>
            <scope>provided</scope>
        </dependency>

        <!-- HTTP Client for Apify API calls -->
        <dependency>
            <groupId>org.apache.httpcomponents.client5</groupId>
            <artifactId>httpclient5</artifactId>
            <version>${version.httpclient}</version>
        </dependency>
        
        <!-- Additional HTTP Client dependencies for SSL/TLS support -->
        <dependency>
            <groupId>org.apache.httpcomponents.core5</groupId>
            <artifactId>httpcore5</artifactId>
            <version>${version.httpcore}</version>
        </dependency>
        
        <dependency>
            <groupId>org.apache.httpcomponents.core5</groupId>
            <artifactId>httpcore5-h2</artifactId>
            <version>${version.httpcore}</version>
        </dependency>

        <!-- test dependencies -->
        <dependency>
            <groupId>io.camunda.connector</groupId>
            <artifactId>connector-test</artifactId>
            <version>${version.connectors}</version>
            <scope>test</scope>
        </dependency>

        <!-- Connector runtime test utilities (for OutboundConnectorContextBuilder in 8.8+) -->
        <dependency>
            <groupId>io.camunda.connector</groupId>
            <artifactId>connector-runtime-test</artifactId>
            <version>${version.connectors}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${version.junit-jupiter}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <version>${version.mockito}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${version.assertj}</version>
            <scope>test</scope>
        </dependency>

        <!-- for testing connectors locally in bundle with runtime -->
        <dependency>
            <groupId>io.camunda.connector</groupId>
            <artifactId>spring-boot-starter-camunda-connectors</artifactId>
            <version>${version.connectors}</version>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.4</version>
                <configuration>
                    <environmentVariables>
                        <CONNECTOR_BASE_URL>http://example.com</CONNECTOR_BASE_URL>
                    </environmentVariables>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <id>connectors</id>
            <name>Connectors Repository</name>
            <url>https://artifacts.camunda.com/artifactory/connectors/</url>
        </repository>

        <repository>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
            <id>connectors-snapshots</id>
            <name>Connectors Snapshot Repository</name>
            <url>https://artifacts.camunda.com/artifactory/connectors-snapshots/</url>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>connectors</id>
            <name>Connectors Repository</name>
            <url>https://artifacts.camunda.com/artifactory/connectors/</url>
        </pluginRepository>

        <pluginRepository>
            <id>connectors-snapshots</id>
            <name>Connectors Snapshot Repository</name>
            <url>https://artifacts.camunda.com/artifactory/connectors-snapshots/</url>
        </pluginRepository>
    </pluginRepositories>

    <profiles>
        <profile>
            <id>generate-templates</id>
            <activation>
                <property>
                    <name>generate.templates</name>
                    <value>true</value>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>io.camunda.connector</groupId>
                        <artifactId>element-template-generator-maven-plugin</artifactId>
                        <version>${version.connectors}</version>
                        <executions>
                            <execution>
                                <phase>package</phase>
                                <goals>
                                    <goal>generate-templates</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <connectors>
                                <connector>
                                    <connectorClass>io.camunda.connector.apify.outbound.ApifyFunction</connectorClass>
                                    <files>
                                        <file>
                                            <templateId>io.camunda.connector.outbound.Apify.v1</templateId>
                                            <templateFileName>apify-outbound-connector.json</templateFileName>
                                        </file>
                                    </files>
                                </connector>
                                <connector>
                                    <connectorClass>io.camunda.connector.apify.inbound.ApifyInboundExecutable</connectorClass>
                                    <files>
                                        <file>
                                            <templateId>io.camunda.connector.inbound.Apify.v1</templateId>
                                            <templateFileName>apify-inbound-connector.json</templateFileName>
                                        </file>
                                    </files>
                                </connector>
                            </connectors>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>
